--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,9 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.16.0</version>
+            <version>3.7.7</version>
+            <type>pom</type>
         </dependency>
-
         <!-- https://mvnrepository.com/artifact/org.hsqldb/hsqldb -->
         <dependency>
             <groupId>org.hsqldb</groupId>
